# ralph-template-fastapi

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  PROMPT.md  RALPH.md  README.md  afk-ralph-claude.sh  afk-ralph-codex.sh  afk-ralph.sh  package.json  turbo.json
.claude/skills/code-reviewer/: SKILL.md
.claude/skills/debugging-wizard/: SKILL.md
.claude/skills/fastapi-expert/: SKILL.md
.claude/skills/nextjs-developer/: SKILL.md
.claude/skills/python-pro/: SKILL.md
.claude/skills/test-master/: SKILL.md
.claude/skills/typescript-pro/: SKILL.md
apps/api/: .env.example  package.json  pyproject.toml
apps/api/app/: config.py  main.py
apps/api/app/routes/: health.py
apps/api/tests/: test_health.py
apps/web/: package.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
scripts/: common_linear.py  fetch_linear_task.py  update_linear_issue.py
